Закончен подраздел реализации системных каталогов в различных субд
Информация про Oracle перенесена из раздела "Представления словаря" и подкорректирована.

Подраздел "Представления словаря", существовавший ранее, принудительно самоуничтожился

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1199,3 +1199,12 @@
     url={https://learn.microsoft.com/ru-ru/sql/relational-databases/system-catalog-views/catalog-views-transact-sql?view=sql-server-ver16}
 }
 
+@online{oracledbdoc1,
+    title={Oracle Database Reference. Part II Static Data Dictionary Views},
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/static-data-dictionary-views.html}
+}
+
+@online{oracledbdoc2,
+    title={Oracle Database Reference. Part III Dynamic Performance Views},
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/dynamic-performance-views.html}
+}
