--- a/part/integrity.tex
+++ b/part/integrity.tex
@@ -151,6 +151,59 @@
         \item обеспечивают обратную совместимость при обновлении версий SQL Server;
         \item позволяют получать данные в удобном формате без необходимости разбираться во внутренней структуре системы.
     \end{itemize}
+
+    \item \textbf{Oracle}.
+    В Oracle Database словарь данных состоит из нескольких наборов представлений. Во многих случаях такой набор состоит из трех представлений, содержащих аналогичную информацию и отличающихся друг от друга своими префиксами \autocite{Kirillov2009}.\\
+
+    Словарь данных базы данных Oracle имеет два основных применения:
+    \begin{itemize}
+        \item Oracle обращается к словарю данных каждый раз, когда выполняются команды языка DDL (Data Definition Language), например \texttt{CREATE TABLE}, \texttt{ALTER TABLE}, \texttt{DROP TABLE} и тд. Например, при создании таблицы Oracle вносить соответвсуюшую запись в \texttt{DBA\_TABLES} и \texttt{ALL\_TABLES}.
+        \item каждый пользователь Oracle может обращаться к словарю данных как к справочнику со сведениями по базе данных (доступные объекты). Нпример DBA может юзать словарь данныхх для мониторинга структуры схемы или например анализа привилегий юзеров
+    \end{itemize}
+
+    При этом словарь данных всегда доступен при открытой базе данных. Он размещается в табличном пространстве SYSTEM, которое всегда находится в состоянии Online, когда база данных открыта.
+
+    Основные категории представлений \autocite{oracledbdoc1}:
+    \begin{enumerate}
+
+        \item \textbf{Представления с префиксом \texttt{USER\_}} содержат информацию об объектах, принадлежащих текущему пользователю. Напирмер \texttt{USER\_TABLES} отображает таблицы, созданные текущим пользователем, а \texttt{USER\_TAB\_COLUMNS} даст инфу о столбцах тааблиц пользователя.
+        Пример запроса:
+        \begin{lstlisting}[language=SQL]
+        SELECT table_name 
+        FROM user_tables;
+        \end{lstlisting}
+
+        \item \textbf{Представления с префиксом \texttt{ALL\_}} предоставляют информацию обо всех объектах, к которым текущий пользователь имеет доступ, независимо от владельца. Например \texttt{ALL\_TABLES} показывает все таблицы, доступные пользователю. \texttt{ALL\_TAB\_COLUMNS} показывает информацию о столбцах всех доступнх таблиц.
+        Пример запроса:
+        \begin{lstlisting}[language=SQL]
+        SELECT table_name 
+        FROM all_tables 
+        WHERE owner = 'HR';
+        \end{lstlisting}
+
+        \item \textbf{Представления с префиксом \texttt{DBA\_}} содержат информацию обо всех объектах в БД и доступны только пользователям с соответствующими привилегиями (типа админ). К примеру \texttt{DBA\_TABLES} предоставляет список всех таблиц в БД, \texttt{DBA\_USERS} - информациб обо всех пользователях БД.
+        Пример запроса:
+        \begin{lstlisting}[language=SQL]
+        SELECT username 
+        FROM dba_users;
+        \end{lstlisting}
+
+    \end{enumerate}
+
+    Столбцы в представленях с префиксами \texttt{USER\_}, \texttt{ALL\_}, \texttt{DBA\_} идентичны, но есть нюанс. Объем данных возвращаемых каждый представлением зависит от прав доступа пользователя. В представлениях \texttt{USER\_} к примеру обычно нет столбца \texttt{OWNER}, так как подразумевается что владелец это текущий пользователь, выдавший запрос. Некоторые представления DBA имеют дополнительные столбцы, которые содержат информацию, полезную для БД.
+
+    \textbf{Динамические представления происзводительности \texttt{V\textdollar}}. \autocite{oracledbdoc2}
+
+    Помимо статических представлений словаря данных, Oracle предоставляет Dynamic Performance Views, также извесные как \texttt{V\textdollar}-представления. Они содержат информацию о текущем состоянии БД и её производительности. Они обновляются в реальном времени и позволяют отслеживать активность системы, типа там текущие сессии, параметры, статистику производительности и тд. То есть используются они для мониторинга активности БД в рельном времени.
+
+    Как пример можно привести \texttt{V\textdollar SESSION} (информация о текущих подключенных сессиях) или \texttt{V\textdollar PARAMETER} (текущие параметры конфигурации БД).
+
+    Пример запроса:
+    \begin{lstlisting}[language=SQL]
+    SELECT sid, serial#, username, status 
+    FROM v$session 
+    WHERE status = 'ACTIVE';
+    \end{lstlisting}
     
 \end{enumerate}
 
@@ -197,39 +250,6 @@
     \item Бизнес-логика (например, для проверки качества данных и объектов схемы);
 \end{itemize}
 
-\paragraph{Представления словаря} ~\\
-
-Рассматривается СУБД Oracle. Словарь данных состоит из нескольких наборов представлений. Во многих случаях такой набор состоит из трех представлений, содержащих аналогичную информацию и отличающихся друг от друга своими префиксами \autocite{Kirillov2009}.\\
-
-Словарь данных базы данных Oracle имеет два основных применения:
-
-\begin{itemize}
-    \item Oracle обращается к словарю данных каждый раз, когда выдается предложение DDL (Data Definition Language);
-    \item каждый пользователь Oracle может использовать словарь данных как только читаемый справочник по базе данных.
-\end{itemize}
-
-При этом словарь данных всегда доступен при открытой базе данных. Он размещается в табличном пространстве SYSTEM, которое всегда находится в состоянии Online, когда база данных открыта.
-
-\begin{itemize}
-    \item USER — представление для пользователя;
-    \item ALL — расширенное представление для пользователя;
-    \item DBA — представление администратора.
-\end{itemize}
-
-Столбцы в каждом представлении набора идентичны, но имеются исключения. В представлениях с префиксом USER обычно нет столбца с именем OWNER (владелец); в представлениях USER под владельцем подразумевается пользователь, выдавший запрос. Некоторые представления DBA имеют дополнительные столбцы, которые содержат информацию, полезную для БД. ~\\
-
-\textbf{Представления с префиксом USER}:
-\begin{itemize}
-    \item отражают окружение пользователя в базе данных, включая информацию о созданных им объектах, предоставленных им грантах и т.д.;
-    \item выдают только строки, имеющие отношение к пользователю;
-    \item имеют столбцы, идентичные с другими представлениями, с тем исключением, что столбец OWNER подразумевается (текущий пользователь);
-    \item возвращают подмножество информации, предоставляемой представлениями ALL;
-    \item могут иметь сокращенные общие синонимы для удобства.
-\end{itemize}
-
-\textbf{Представления с префиксом ALL} отражают общее представление о базе данных со стороны пользователя. Эти представления возвращают информацию об объектах, к которым пользователь имеет доступ через общие или явные гранты, помимо тех объектов, которыми владеет этот пользователь. ~\\
-
-\textbf{Представления с префиксом DBA} показывают общее представление о базе данных, и предназначены для администраторов базы данных. Во время своей работы Oracle поддерживает набор "виртуальных" таблиц, в которых регистрируется текущая информация о базе данных. Эти таблицы называются динамическими таблицами производительности. Так как динамические таблицы производительности не являются истинными таблицами, большинство пользователей не должно обращаться к ним. Динамические таблицы производительности принадлежат схеме SYS, а их имена начинаются с V\_\$. По этим таблицам создаются представления, а для представлений создаются синонимы, имена которых начинаются с V\$.
 
 \subsection{Понятие транзакции}
 
