added a part of paragraph
added info 'bout system catalog structure (not finished)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1208,3 +1208,19 @@
     title={Oracle Database Reference. Part III Dynamic Performance Views},
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/dynamic-performance-views.html}
 }
+
+@book{ElmasriNavathe,
+    author    = {Ramez Elmasri, Shamkant B. Navathe},
+    title     = {{Fundamentals of Database Systems. 6th edition}},
+    publisher = {Addison-Wesley (Pearson)},
+    year      = 2010,
+    url = {https://asolanki.co.in/wp-content/uploads/2019/02/Fundamentals_of_Database_Systems_6th_Edition-1.pdf}
+}
+
+@book{Silberschatz,
+    author    = {Abraham Silberschatz, Henry F. Korth, S. Sudarshan},
+    title     = {{Database System Concepts. 7th edition}},
+    publisher = {McGrawHill},
+    year      = 2020,
+    url = {https://github.com/Moataz-Elmesmary/Data-Science-Roadmap/blob/main/Books/Abraham%20Silberschatz%2C%20Henry%20Korth%20and%20S.%20Sudarshan%20-%20Database%20System%20Concepts.%207-McGraw-Hill%20Education%20(2020).pdf}
+}
