--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1199,6 +1199,21 @@
     url={https://learn.microsoft.com/ru-ru/sql/relational-databases/system-catalog-views/catalog-views-transact-sql?view=sql-server-ver16}
 }
 
+@online{MicrosoftLearnSQLserverInd,
+    title={Indexes},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/indexes/indexes?view=sql-server-ver16}
+}
+
+@online{MicrosoftLearnSQLserverTab,
+    title={Tables},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/tables/tables?view=sql-server-ver16}
+}
+
+@online{MicrosoftLearnSQLserverPerm,
+    title={Get started with Database Engine permissions},
+    url={https://learn.microsoft.com/en-us/sql/relational-databases/security/authentication-access/getting-started-with-database-engine-permissions?view=sql-server-ver16}
+}
+
 @online{oracledbdoc1,
     title={Oracle Database Reference. Part II Static Data Dictionary Views},
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/static-data-dictionary-views.html}
@@ -1207,6 +1222,11 @@
 @online{oracledbdoc2,
     title={Oracle Database Reference. Part III Dynamic Performance Views},
     url={https://docs.oracle.com/en/database/oracle/oracle-database/19/refrn/dynamic-performance-views.html}
+}
+
+@online{oracledbdoc3,
+    title={Oracle Database Security Guide. Part II Managing Security for Oracle Database Users},
+    url={https://docs.oracle.com/en/database/oracle/oracle-database/19/dbseg/managing-security-for-oracle-database-users.html#GUID-8C779885-01F2-48E0-9612-E33508885B19}
 }
 
 @book{ElmasriNavathe,
